<resources>
    <string name="app_name">TercerApp</string>
    <string name="txtN1">Ingrese Numero 1</string>
    <string name="txtN2">Ingrese Numero 2</string>
    <string name="rb1">Sumar</string>
    <string name="rb2">Restar</string>
    <string name="rb3">Multiplicar</string>
    <string name="rb4">Dividir</string>
    <string name="bt1">Calcular</string>
    <string name="txtView_result">Resultado</string>
</resources>